Create new column and add to project
